made image content block

--- a/wp-content/themes/socialbrothers/templates/twig/header.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/header.twig
@@ -11,4 +11,4 @@
     </head>
     <body class="{{ body_class|raw }} w-full mx-0 my-0">
         {{ action('after_body') }}
-    {% include 'organisms/header.twig' with header %}
+    {# {% include 'view/header.twig' with header %} #}
