--- a/wp-content/themes/socialbrothers/templates/twig/atoms/image.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/atoms/image.twig
@@ -1,3 +1,3 @@
-{% if image_id %}
-    {{ wp_get_attachment_image(image_id, size|default('large'), false, {class: image_classes|default('w-full') ~ ' ' ~ ratio})|raw }}
+{% if image %}
+    {{ wp_get_attachment_image(image, size|default('large'), false, {class: image_classes|default('w-full') ~ ' ' ~ ratio})|raw }}
 {% endif %}
