--- a/wp-content/themes/socialbrothers/templates/twig/atoms/button.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/atoms/button.twig
@@ -1,6 +1,9 @@
 {% if url %}
     <a href="{{ url }}" class="btn {{ type|default('btn--solid') }}" target="{{ target|default('_self') }}">
-    
+        {% if icon %}
+            {% include 'atoms/icon.twig' %}
+        {% endif %}
+
         {{ title|raw }}
     </a>
 {% endif %}
