--- a/wp-content/themes/socialbrothers/templates/twig/header.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/header.twig
@@ -5,7 +5,9 @@
     <!--suppress HtmlRequiredTitleElement -->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded&family=Material+Icons&family=Lato:ital,wght@0,400;0,700;1,400&family=Merriweather:wght@700&display=swap"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded&family=Material+Iconsd&family=Material+Symbols+Outline&family=Lato:ital,wght@0,400;0,700;1,400&family=Merriweather:wght@700&display=swap"/>
+        <link href="“https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined”" rel="“stylesheet”">
+
 
         {{ action('wp_head') }}
     </head>
