PR comments resolve

--- a/wp-content/themes/socialbrothers/templates/twig/atoms/icon.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/atoms/icon.twig
@@ -3,7 +3,7 @@
 
 
 
-<span class="material-symbols-rounded font-smibold">{{ icon }}</span>
+<span class="material-symbols-rounded font-semibold">{{ icon }}</span>
 
 
 
