--- a/wp-content/themes/socialbrothers/templates/twig/header.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/header.twig
@@ -13,4 +13,4 @@
     </head>
     <body class="{{ body_class|raw }} w-full mx-0 my-0">
         {{ action('after_body') }}
-    {# {% include 'view/header.twig' with header %} #}
+    {% include 'organisms/header.twig' with header %}
