--- a/wp-content/themes/socialbrothers/templates/twig/atoms/icon.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/atoms/icon.twig
@@ -1,11 +1,5 @@
 {% if icon %}
-<div class="flex justify-{{ align }} {{ size }} {{ color }} items-center">
-
-
-
-<span class="material-symbols-rounded font-semibold">{{ icon }}</span>
-
-
-
+	<div class="flex justify-{{ align }} {{ size }} {{ color }} items-center">	
+		<span class="material-symbols-rounded">{{ icon }}</span>
 	</div>
 {% endif %}
