--- a/wp-content/themes/socialbrothers/templates/twig/organisms/content-image.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/content-image.twig
@@ -1,8 +1,8 @@
-<section class="w-screen p-2 md:p-10 md:py-14">
+<section class="w-screen p-2 py-10 md:p-10 md:py-14">
 	<div class="flex flex-col items-center md:flex-row-reverse gap-5 mx-auto justify-center container">
 		<div class="flex flex-col md:w-1/2 w-full">
 
-			<p class="text-green-900 font-semibold my-1">{{ sub_title }}</p>
+			<p class="{{ subtitle_color}} font-semibold my-1">{{ sub_title }}</p>
 			
 			{% if title != '' %}
 				<h1>{{ title }}</h1>
