--- a/wp-content/themes/socialbrothers/templates/twig/organisms/content-image.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/content-image.twig
@@ -19,8 +19,9 @@
 			</div>
 		</div>
 
-		<div>
+		<figure>
 			{% include 'atoms/image.twig' with {'image' : image_id} %}
-		</div>
+		</figure>
+
 	</div>
 </section>
