--- a/wp-content/themes/socialbrothers/templates/twig/footer.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/footer.twig
@@ -1,3 +1,4 @@
 {{ do_action('wp_footer') }}
-{# {% include "organisms/footer.twig" %} #}
+{% include "organisms/footer.twig"%}
+
 {{ closing_tags|raw }}
