Header block checked and ready to merge

--- a/wp-content/themes/socialbrothers/src/styles/components/_form.scss
+++ b/wp-content/themes/socialbrothers/src/styles/components/_form.scss
@@ -1,5 +1,5 @@
 .header-nav {
-    &:has(:checked) {
+    &:has(#search_toggle:checked) {
         .search-form {
             @apply block;
         }
@@ -8,9 +8,12 @@
 }
 
 form {
-    input[type="text"] {
+
+
+    input[type="text"], select {
         @apply w-full md:min-w-52 p-2 border-2 border-gray-200;
     }
+    
 
     input[type="submit"], button[type="submit"] {
         @apply btn btn--solid;
