--- a/wp-content/themes/socialbrothers/templates/twig/atoms/button.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/atoms/button.twig
@@ -1,5 +1,6 @@
 {% if url %}
-    <a href="{{ url }}" class="btn {{ type|default('btn--solid') }} min-w-fit" target="{{ target|default('_self') }}">
+<a href="{{ url }}" class="btn  {{ type|default('btn--solid') }} min-w-fit {{ additional_classes }}" target="{{ target|default('_self') }}">
+
         {% if icon %}
             {% include 'atoms/icon.twig' %}
         {% endif %}
