--- a/wp-content/themes/socialbrothers/src/styles/styles.scss
+++ b/wp-content/themes/socialbrothers/src/styles/styles.scss
@@ -40,6 +40,7 @@ body {
 
 * {
   box-sizing: border-box;
+  margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
