Revert "Header block checked and ready to merge"
This reverts commit 963a8378fe92d47a46850dd527cfdd9f1ae3b187.

--- a/wp-content/themes/socialbrothers/src/styles/components/_main-menu.scss
+++ b/wp-content/themes/socialbrothers/src/styles/components/_main-menu.scss
@@ -1,6 +1,6 @@
 .menu-main {
     
-    @apply flex flex-wrap gap-4  w-max;  
+    @apply flex flex-wrap gap-2 lg:gap-8;  
     
     li {
         @apply p-4;
