--- a/wp-content/themes/socialbrothers/templates/twig/header.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/header.twig
@@ -4,13 +4,13 @@
     {{ language_attributes|raw }}>
     <!--suppress HtmlRequiredTitleElement -->
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded&family=Material+Iconsd&family=Material+Symbols+Outline&family=Lato:ital,wght@0,400;0,700;1,400&family=Merriweather:wght@700&display=swap"/>
-        <link href="“https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined”" rel="“stylesheet”">
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded&family=Material+Iconsd&family=Material+Symbols+Outline&family=Lato:ital,wght@0,400;0,700;1,400&family=Merriweather:wght@700&display=swap'/>
+        <link href='“https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined”' rel='“stylesheet”'>
 
 
         {{ action('wp_head') }}
     </head>
-    <body class="{{ body_class|raw }} w-full mx-0 my-0">
+    <body class='{{ body_class|raw }} w-full mx-0 my-0'>
         {{ action('after_body') }}
     {% include 'organisms/header.twig' with header %}
