--- a/wp-content/themes/socialbrothers/templates/twig/organisms/footer.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/footer.twig
@@ -1,5 +1,5 @@
 <footer class='bg-secondary-light p-2 py-10 md:p-10 md:pt-14 md:pb-5'>
-	<div class="container flex flex-col gap-y-6">
+	<div class='container flex flex-col gap-y-6'>
 
 		<section class='flex flex-col md:flex-row'>
 			<div class='md:w-1/2'>
@@ -8,8 +8,8 @@
 				</div>
 
 				<div class='flex flex-col font-semibold text-4xl gap-6 my-6'>
-                    <a href="tel:{{ phone_link }}" class='hover:underline'>{{ phone }}</a>
-                    <a href="mailto:{{ email }}" class='hover:underline'>{{ email }}</a>
+                    <a href='tel:{{ phone_link }}' class='hover:underline'>{{ phone }}</a>
+                    <a href='mailto:{{ email }}' class='hover:underline'>{{ email }}</a>
 				</div>
 			</div>
 
@@ -25,7 +25,7 @@
             <div class='flex items-center justify-center space-x-6 mt-6 md:mt-0'>
                 {% if socials %}
                     {% for social in socials %}
-                        <a href="{{ social.socials_platform.url }}" class='text-2xl'>
+                        <a href='{{ social.socials_platform.url }}' class='text-2xl'>
                             {% if social.socials_icon %}
                                 {% include 'atoms/company-icons/'~ social.socials_icon ~'.twig'%}
                             {% endif %}
