--- a/wp-content/themes/socialbrothers/templates/twig/organisms/hero.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/hero.twig
@@ -1,16 +1,16 @@
-<section class="w-screen p-2 py-10 md:p-10 md:py-20">
-	<div class="flex flex-col items-center md:flex-row gap-10 mx-auto justify-center container">
-		<div class="flex flex-col md:w-1/2 w-full space-y-8">
+<section class='w-screen p-2 py-10 md:p-10 md:py-20'>
+	<div class='flex flex-col items-center md:flex-row gap-10 mx-auto justify-center container'>
+		<div class='flex flex-col md:w-1/2 w-full space-y-8'>
 
-			<div class="md:w-3/4 space-y-8">
+			<div class='md:w-3/4 space-y-8'>
 				{% if hero_title != '' %}
-					<h1 class="{{ hero_title_size}}">{{ hero_title }}</h1>
+					<h1 class='{{ hero_title_size}}'>{{ hero_title }}</h1>
 				{% endif %}
 
 				{% include 'atoms/text.twig' with {'text': hero_content|raw} %}
 			</div>
 
-			<div class="flex gap-5">
+			<div class='flex gap-5'>
 				{% if buttons %}
 					{% for button in buttons %}
 						{% include 'atoms/button.twig' with button %}
