--- a/wp-content/themes/socialbrothers/templates/twig/organisms/info-box.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/info-box.twig
@@ -1,4 +1,4 @@
-<section class="w-screen p-2 md:p-10 md:py-14 {{ wrapper_background }}">
+<section class="w-screen p-2 py-6 md:p-10 md:py-14 {{ wrapper_background }}">
 
 	<div class='container'>
 		<div class="flex flex-col md:flex-row mx-auto gap-8 justify-between">
