btn error fixed

--- a/wp-content/themes/socialbrothers/templates/twig/organisms/header.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/header.twig
@@ -53,7 +53,7 @@
 							<form action='#' method='get' class='flex justify-end bg-white'>
 									<fieldset class='flex flex-row gap-4'>
 										<input type='text' name='search_field' class='w-full md:min-w-52 p-2 border-2 border-gray-200' placeholder='{{ 'Zoek naar...'|translatable }}'/>
-										<button type='submit' class='btn'>
+										<button type='submit' class='py-[10px] px-4 border-2 justify-center uppercase no-underline font-bold rounded-[4px] inline-flex gap-2 leading-4 border-primary bg-primary text-white transition-colors items-center min-h-[48px]'>
 											{% include 'atoms/icon.twig' with {
 											icon  : 'search',
 											color : 'inherit',
