--- a/wp-content/themes/socialbrothers/templates/twig/organisms/cta.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/cta.twig
@@ -14,7 +14,7 @@
         <div class='flex flex-col items-start md:flex-row-reverse gap-16 mx-auto justify-center p-6 lg:p-14 rounded-xl {{ wrapper_background }}'>
             
             <section class='flex flex-col md:w-2/3 w-full ml-3 {{ text_color }}'>
-                {% include 'modules/content.twig' with content_block %}
+                {% include 'modules/side-content.twig' with content_block %}
             </section>
 
             <figure>
