--- a/wp-content/themes/socialbrothers/src/styles/styles.scss
+++ b/wp-content/themes/socialbrothers/src/styles/styles.scss
@@ -18,6 +18,21 @@
 
 @use "components/menu-simple";
 
+@use "./woocommerce/wc-form";
+
+// @use "./woocommerce/*.scss";
+
+@use "./woocommerce/wc-single-product";
+
+@use "./woocommerce/wc-product-card";
+
+@use "./woocommerce/partials/wc-product-meta";
+
+@use "./woocommerce/partials/wc-typography";
+
+@use "./woocommerce/partials/wc-container";
+
+
 
 html,
 body {
