--- a/wp-content/themes/socialbrothers/templates/twig/organisms/slider.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/slider.twig
@@ -14,7 +14,7 @@
 
 		<section class='flex flex-col w-full space-y-4 md:w-2/5'>
 			<div class='md:w-64'>
-				{% include 'modules/content.twig' with content_block %}
+				{% include 'modules/side-content.twig' with content_block %}
 			</div>
 		</section>
 
