related card styling and logics added

--- a/wp-content/themes/socialbrothers/src/styles/styles.scss
+++ b/wp-content/themes/socialbrothers/src/styles/styles.scss
@@ -20,6 +20,8 @@
 
 @use "./woocommerce/wc-form";
 
+@use "./woocommerce/wc-archive";
+
 @use "./woocommerce/wc-single-product";
 
 @use "./woocommerce/wc-product-card";
